fix: #1657 preview apps pages UI broken on ie11 (#1725)

--- a/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
+++ b/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
@@ -42,6 +42,9 @@
     display: flex;
     flex-direction: column-reverse;
   }
+  @include for-ie-only {
+    min-width: 1024px;
+  } 
 }
 
 .flexContainer {
